--- a/FrontEnd/style.css
+++ b/FrontEnd/style.css
@@ -32,13 +32,14 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 60px;
+    height: 130px;
     padding: 20px 0;
     font-size: 13px;
   }
   
   .main-nav .logo {
-    width: 110px;
+    padding-top: 20px;
+    width: 200px;
   }
   
   .main-nav ul {
@@ -99,12 +100,13 @@
   .showcase {
     width: 100%;
     height: 400px;
-    background: url('https://i.ibb.co/zGSDGCL/slide1.png') no-repeat center center/cover;
+    background-color: lightslategray;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
     justify-content: flex-end;
+  
     padding-bottom: 50px;
     margin-bottom: 20px;
   }
