--- a/FrontEnd/css/style.css
+++ b/FrontEnd/css/style.css
@@ -344,6 +344,11 @@ i{
 	background-color:#00bba7;
 	color:#fff;
 }
+.solicitar{
+
+	background-color:#181d1cb7;
+	color:#fff;	
+}
 .edd-submit.button,.edd-submit.button:visited {
 	background-color:#00bba7;
 	color:#fff;
